[package]
name = "friendly_safety_buddy"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/John2143/totally-speedy-transmute/"
license = "MIT"
description = "A fun macro to write safe code with"

[lib]
crate-type = ["proc-macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
